Fixed lost IFRAME! Dimentions of table is wrong though.  Saving.

--- a/Mansion/mansion.html
+++ b/Mansion/mansion.html
@@ -110,9 +110,44 @@ function MM_swapImage() { //v3.0
 					<IMG border="0" src="../images/spacer.gif" width="2" height="385">
 					</TD>
 					<TD width="876" valign="top">
-						<IFRAME NAME="iframe1" SRC="http://www.friendsofhartpark.org/Mansion/museum.html" FRAMEBORDER="0" ALIGN="top, middle" HEIGHT="785" WIDTH="100%" HSPACE="0" VSPACE="0" SCROLLING="auto">
-							If you can see this message, your browser does not support iframes. To correct this make sure your browser is updated to it's latest version.
-						</IFRAME>
+                    <!--  ******************************************************* -->
+
+<TABLE width="90%" height="70%" border="0" cellspacing="0" cellpadding="2">
+	<TBODY>
+		<TR>
+			<TD valign="top">
+			  <div align="center" class="IMG"><IMG border="0" src="../images/house_WSH.jpg" width="340" height="230" 
+						  alt="William S. Hart Museum
+24151 San Fernando Road
+Newhall, Ca. 91350
+Museum	  (661) 254-4584
+Park	  (661) 259-0855
+www.hartmuseum.org">
+						  <br><B class="CPTN">
+						  <a href="javascript:location='museum.html'; window.open('../WilliamSHart/snapshot.html','WSH','height=504,width=480,menubar=no,scrollbars=no,resizable=no')" 
+						  style="text-decoration: underline">William S. Hart</a> Museum</B>
+						  </div>
+						  <HR>
+					<B class="ALT">La Loma de los Vientos</b><br>
+<b class="EVNTS">(The Hill of the Winds)</b>
+<h4>
+<P>The Hart Museum sits atop a hill within a large park area. It is a house museum that was once the retirement home of William S. Hart, a silent-screen cowboy movie star. 
+The Spanish colonial Revival style mansion contains original furnishings, an impressive collection of western art, mementos or early Hollywood and Native American artifacts. 
+In addition, there is a furnished 1910 ranch house which is open for unguided tours.<br><br>The surrounding park grounds are operated by the Los Angeles County Department of 
+Parks and Recreation. Picnic facilities are available in the park. There is a nature trail, a live farm animal exhibit, a herd of bison occupying part of the range area of 
+this 260 acre "Horseshoe Ranch", and <b>free tours</b> of the house!<br><br>William S. Hart park is less than an hour's drive from most areas of Los Angeles. </p>
+<ul>
+<li>
+<p>
+Tours are every half hour, 11am to 4pm (last tour at 3:30pm).
+</li>
+</ul>
+<p>Handicap accommodations are available.</P>
+<p> For more Museum information, visit <a href="http://www.hartmuseum.org" target="_blank">www.hartmuseum.org</a>.</p>
+</h4>
+			</TD>
+		</TR>
+                    <!--  ********************************************** -->
 					</TD>
 					<TD width="60">
 					&nbsp;
