--- a/index.html
+++ b/index.html
@@ -219,26 +219,18 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-                                      <a href= "Event_Pages/CowboysCarols2018-lg.png" 
-                                      title="Cowboys &amp; Carols" rel="lightbox[cowboyscarols]">
-                                      <img src="Event_Pages/CowboysCarols2018-sm.jpg"/>
-                                      </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-                                      <a href= "Event_Pages/HartHolidayBoutique2018flyer.jpg" 
-                                      title="Hart Holiday Boutiuque" rel="lightbox[hartholiday]">
-                                      <img src="Event_Pages/HartHolidayBoutique2018-sm.jpg"/>
-                                      </a>
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                <h2>2018 Calendar of Events</h2>
+                                <h2>2019 Calendar of Events</h2>
+                                <!--
                                 <h3>Click on links as details become available</h3>
+                                -->
+                                <h3>Stay tuned while we rustle up the details for upcoming events!</h3>
+                                <h4>Please check back</h4>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
+                                    <!--
                                     <tr>
                                       <td id="EventDate">Saturday, Dec. 1<sup>st</sup>
                                       6:30pm&ndash;8:30pm</td>
@@ -248,17 +240,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                       Cowboys &amp; Carols</a> gather in Hart Hall
                                       </td>
                                     </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                        Saturday &amp; Sunday, Dec. 8<sup>th</sup>&ndash;9<sup>th</sup>
-                                        10am&ndash;4pm
-                                        </td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/HartHolidayBoutique2018flyer.jpg" 
-                                      title="Hart Holiday Boutiuque" rel="lightbox[hartholiday]">
-                                      Hart Holiday Boutique</a> in Hart Hall
-                                      </td>
-                                    </tr>
+                                    -->
 <!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
