Fixed old iframe refereces to museum.org

--- a/Mansion/mansion.html
+++ b/Mansion/mansion.html
@@ -187,11 +187,8 @@ cellspacing="0" bgcolor="#F6F5EE">
                           height="230" alt=
                           "William S. Hart Museum 24151 San Fernando Road Newhall, Ca. 91350 Museum (661) 254-4584 Park (661) 259-0855 www.hartmuseum.org"><br>
 
-                          <b class="CPTN"><a href=
-                          "javascript:location='museum.html';%20window.open('../WilliamSHart/snapshot.html','WSH','height=504,width=480,menubar=no,scrollbars=no,resizable=no')"
-                          style=
-                          "text-decoration: underline">William S.
-                          Hart</a> Museum</b>
+                          <b class="CPTN"><a target="_blank" href="http://hartmuseum.org">
+                          William S. Hart Museum</a></b>
                         </div>
                         <hr>
                         <b class="ALT">La Loma de los
