--- a/index.htm
+++ b/index.htm
@@ -219,17 +219,135 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
+                          <p>
+                                <h3>Friends of Hart Park Events at the</h3>
+                                <h1>2019 Cowboy Festival!</h1>
+                                <h3>Featuring Cow Bop and National Cash!</h3><br>
+                          <a href="Event_Pages/cowboyfest.html">
+                          <img src="Event_Pages/cowboyfest2019/cowboyfest.jpg" />
+                            <br>
+                          <h2>Click here for details and tickets</h2>
+                          <p>
+                          </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
-                                <!--
                                 <h3>Click on links as details become available</h3>
-                                -->
-                                <h3>Stay tuned while we rustle up the details for upcoming events!</h3>
-                                <h4>Please check back</h4>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
+
+<tr> <td id="EventDate">
+Friday&ndash;Sunday, April 12<sup>th</sup>&ndash;14<sup>th</sup>)
+</td> <td id="Event"> 
+Cowboy Festival<br>
+<a href="Event_Pages/cowboyfest.html">
+FOHP events Friday &amp; Saturday, April 12<sup>th</sup> &amp; 13<sup>th</sup><br>Cow Bop &amp; National Cash
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Fridays at dusk, May 11<sup>th</sup>, June 1<sup>st</sup>, June 15<sup>th</sup>, July 20<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/music2019/music2019-lg.jpg" 
+   title="Music in the Park" rel="lightbox[events2019]">
+Music in the Park
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Saturday &amp; Sunday, May 18<sup>th</sup> &amp; 19<sup>th</sup>, 10am&ndash;4pm in Hart Hall
+</td> <td id="Event"> 
+<a href= "Event_Pages/artisanRow2019-lg.png" 
+   title="Artisan Row Home Arts &amp; Crafts Show" rel="lightbox[events2019]">
+Artisan Row Home Arts &amp; Crafts Show
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Saturday, June 1<sup>st</sup> 8am&ndash;12pm
+</td> <td id="Event"> 
+Yoga Kula Festival
+</td></tr>
+
+<tr> <td id="EventDate">
+Saturday &amp; Sunday, June 8<sup>th</sup> &amp; 9<sup>th</sup>, 10am&ndash;5pm in Hart Hall
+</td> <td id="Event"> 
+<a href= "Event_Pages/quilts2019-lg.jpg" 
+   title="SCV Quilt Guild Quilt Show" rel="lightbox[events2019]">
+SCV Quilt Guild Quilt Show
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Sunday, June 23<sup>rd</sup> at 6pm in Hart Hall
+</td> <td id="Event"> 
+<a href= "Event_Pages/music2019/sax2019-lg.png" 
+   title="Music in the Park" rel="lightbox[events2019]">
+Saxtravaganza Free Saxaphone Concert
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Fridays at dusk, June 28<sup>th</sup>, July 12<sup>th</sup>, July 26<sup>th</sup>, Aug 16<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/movies2019/movies2019-lg.png" 
+   title="Movies in the Park" rel="lightbox[events2019]">
+Summer Movies in the Park
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Saturday, August 10<sup>th</sup> at 6pm
+</td> <td id="Event"> 
+<a href="Event_Pages/silents.html">
+Silents Under the Stars
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Saturday, Sept. 14<sup>th</sup> &amp; 15<sup>th</sup>, 10am&ndash;4pm in Hart Hall
+</td> <td id="Event"> 
+Annual Hart Train Show
+</td></tr>
+
+<tr> <td id="EventDate">
+Saturday, Oct. 5<sup>th</sup> 11am&ndash;6pm &amp; Sunday, Oct 6<sup>th</sup> 11am&ndash;5pm
+</td> <td id="Event"> 
+<a href="Event_Pages/powwow.html">
+Native American Pow Wow &amp; Craft Fair
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Sunday, Oct. 13<sup>th</sup>, 10am&ndash;4pm
+</td> <td id="Event"> 
+Bow Wows &amp; Meows Pet Fair
+</td></tr>
+
+<tr> <td id="EventDate">
+Saturday &amp; Sunday, Oct. 19<sup>th</sup> &amp; 20<sup>th</sup> in Hart Hall
+</td> <td id="Event"> 
+SCV Artists Association Arts Classic
+</td></tr>
+
+<tr> <td id="EventDate">
+Saturday, Nov. 2<sup>nd</sup> in Hart Hall
+</td> <td id="Event"> 
+SCV Rose Society&mdash;25th Annual Wild West Rose Show
+</td></tr>
+
+<tr> <td id="EventDate">
+Satuday &amp; Sunday, Nov 23<sup>rd</sup> &amp; 24<sup>th</sup>, 10am&ndash;4pm in Hart Hall
+</td> <td id="Event"> 
+8th Annual Hart Holiday Boutique
+</td></tr>
+
+<tr> <td id="EventDate">
+Saturday, Dec. 7<sup>th</sup>
+</td> <td id="Event"> 
+Cowboys &amp; Carols
+</td></tr>
                                     <!--
                                     <tr>
                                       <td id="EventDate">Saturday, Dec. 1<sup>st</sup>
@@ -255,8 +373,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 -->
-                                    </td>
-                                    </tr>
                                   </tbody>
                                 </table>
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
