--- a/Event_Pages/cowboyfest.html
+++ b/Event_Pages/cowboyfest.html
@@ -93,7 +93,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                   <td width="50">&nbsp;</td>
                   <td width="896">
                     <div class="TTL" align="center">
-                      <p style="margin-top: 0"><font color="#800000">2017
+                      <p style="margin-top: 0"><font color="#800000">2019
 
 
                           Santa Clarita Cowboy Festival</font></p>
@@ -198,58 +198,52 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                   <td valign="top" width="876">
                     <hr>
 <div id="titleside">
-<h2>The 2017 Santa Clarita Cowboy Festival will again be in William S. Hart&rsquo;s Park!</h2>
+<h2>The 2019 Santa Clarita Cowboy Festival will be in William S. Hart&rsquo;s Park!</h2>
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="topside">
 <h3>It&rsquo;s that time of year again!</h3>
 <p>Time to wake up and smell the grits! Time to trade in our business casual for chaps, our hardhats for Stetsons, and ride into town on a paint instead of a Pontiac.</p>
 <p>That&rsquo;s because, saddle-pals, once again here comes the Santa Clarita Cowboy Festival! And this year, Friends, Hart Park will be at the &ldquo;Hart&rdquo; of the action!</p>
-<h3 style="display: inline;">The Friends of Hart Park is especially proud to host two very special nights of entertainment, in the William S. Hart's living room up at the mansion.
-Seating is limited, so get your tickets to the fun right <a href="http://cowboyfestival.org/venues/hart-mansion" target="_blank">HERE</a></h3>
+<h3 style="display: inline;">The Friends of Hart Park is especially proud to host two very special nights of entertainment.
+Get your tickets to the fun right <a href="http://cowboyfestival.org" target="_blank">HERE</a></h3>
 <small style="display: inline;"> (Opens a new window) </small>
 <h3 style="display: inline;">or click below for further details.</h3>
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="leftside">
-<p>Friday, Apr. 21<sup>st</sup> at 8pm for $75</p>
-<a href="http://cowboyfestival.org/performers/dave-stamey/" target="_blank">
-<h2>Dave Stamey</h2></a>
-<a href="http://cowboyfestival.org/performers/dave-stamey/" target="_blank">
-<img src="cowboyfest2017/Dave-Stamey.jpg" />
+<p>Friday, Apr. 12<sup>th</sup> at 7pm for $20</p>
+<a href="http://cowboyfestival.org/cowboy-dance-with-cow-bop/" target="_blank">
+<h2>Cowboy Dance with Cow Bop</h2></a>
+<a href="http://cowboyfestival.org/cowboy-dance-with-cow-bop/" target="_blank">
+<img src="cowboyfest2019/cowbop.jpg" />
 </a>
 <p>
-Start your Cowboy Festival with the incredible Dave Stamey in his only full concert this weekend.
+Start your Cowboy Festival dancing to great western music!
 <p>
-Dave has been a cowboy, a mule packer, a dude wrangler, and now heads the list of one of the most popular Western entertainers working today. Cowboys and Indians Magazine calls him "the Charley Russell of Western Music." The Western Music Association voted him "Entertainer of the Year" six times, "Male Performer of the Year" six times and "Songwriter of the Year" five times.  His "Vaquero Song" has been called one of the greatest Western songs of all time. True West Magazine named him "Best Living Western Solo Musician" three times and he has also received the prestigious "Will Rogers Award" from the Academy of Western Artists.
+Join the Friends of Hart Park for an evening of western swing music and dance with returning Cowboy Festival performers Cow Bop, who mix swingin' grooves, thrilling riffs, sweet and hot vocals, western sensibilities and tons of fun for an electric performance. The band's collective experience crosses the spectrum of American music, from the hottest jazz and the coolest swing to the most down-home honky-tonk.
 <p>
-He's delighted audiences in twenty-three states and is now back in cowboy movie star <em>William S. Hart</em>'s mansion. Tour Hart's historic 10,000 square foot residence and then relax in his living room among his Remington's and Russell's for an evening of memorable music.
-<p>
-It's the perfect setting for Dave to paint pictures of the open range, sharing humorous stories from the trail and take you on a musical journey through rich, historical western songs of today and yesterday. Hear the west the way it should be sung and remembered.
+Doors open at 6:30 pm. Dance lessons provided between 6:30 and 7:00 p.m. Beer and wine available for purchase. Parking provided onsite at William S. Hart Park.
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="rightside">
-<p>Saturday, Apr. 22<sup>nd</sup> at 8pm for $45</p>
-<a href="http://cowboyfestival.org/schedule/wyatt-earp/" target="_blank">
-<h2>Wyatt Earp is back!</h2></a>
-<a href="http://cowboyfestival.org/schedule/wyatt-earp/" target="_blank">
-<img src="cowboyfest2017/wyatt2.jpg" />
+<p>Saturday, Apr. 13<sup>th</sup> at 8pm for $15</p>
+<a href="http://cowboyfestival.org/national-cash/" target="_blank">
+<h2>A Night with National Cash A Tribute to Johnny Cash</h2></a>
+<a href="http://cowboyfestival.org/national-cash/" target="_blank">
+<img src="cowboyfest2019/nationalcash.jpg" />
 </a>
-<p>Hearing your many requests, this year we are presenting TWO incredible authors whose dedicated research has uncovered even more of the <em>real true life story</em> of Wyatt Earp and his family.
 <p>
-Author, lecturer and historian <em>Garner Palenske</em> spent 8 years chronicling the Earp's years in San Diego, where Wyatt bought property, established gambling houses, owned racehorses and became one of the main power brokers in the tightly controlled local gambling syndicate. He concentrated on making money, both legally and illegally.  Wyatt's walking a thin line with the law in San Diego is a fascinating, rough and tumble story that is often filled with controversy.
+Join the Friends of Hart Park for an evening of music with National Cash, a tribute to Johnny Cash. National Cash expertly escorts the audience on a trip down memory lane through Johnny Cash's musical repertoire, intertwining local stories and historical anecdotes with the music to help bring Johnny's bad-boy reputation to life, giving fans a taste of his time spent in the Ojai Valley. The perfect show for Johnny Cash fans new and old. National Cash's Johnny Cash Tribute is truly a show not to be missed.
 <p>
-<em>Nicholas Cataldo</em> is a past President of the San Bernardino Historical Society, a renowned educator, Columnist, and Earp Historian focusing on Southern California. Wyatt and his family came west by wagon in 1864. For the next 65 years, he would be in and out of California, finding it a safe haven, before, during and after his turbulent Tombstone days. Wyatt drove freight wagons, refereed boxing matches, ran card games, and mined for gold and oil.  In later years, Wyatt became good friends with cowboy movie stars William S. Hart and Tom Mix who were both pallbearers at Wyatt's funeral here in Los Angeles. There are many wonderful stories to be told about Wyatt and his family in Southern California.
-<p>
-Hear these two insightful authors for one night only, in the magnificent living room of Bill Hart's 10,000 square foot Mansion, high atop the hill in Hart Park. There is nothing like the experience of hearing true stories about a real west icon while sitting among the western paintings and collections of <em>William S. Hart</em>, the granddaddy of western movie heroes and real life friend of Wyatt Earp.
+Doors open at 7:30 pm. Beer and wine available for purchase. There is no onsite parking. Parking is available at the Cowboy Festival Shuttle Site and a free courtesy shuttle will drop off and pick up from the park. Last shuttle leaves the park at 10 pm
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="footside">
-<h3>Remember, seating is limited, so get your tickets 
-<a href="http://cowboyfestival.org/venues/hart-mansion/" target="_blank">HERE.</h3>
-Hart Mansion events are Apr. 21-22!
-</video>
+<h3>Don't miss the Friends of Hart Park festival fun, and get your tickets 
+<a href="http://cowboyfestival.org/" target="_blank">HERE</h3>
 </a>
+for Friday and Saturday, April 12<sup>th</sup> &amp; 13<sup>th</sup> at William S. Hart Park. 24151 Newhall Avenue, Santa Clarita, CA 91321
 </div>
                   </td>
                   <td width="60"> &nbsp; </td>
