--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -120,15 +120,15 @@ function MM_swapImage() { //v3.0
 										<br>
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
-<h1 align="center" class="silents">THANK YOU</h1><br>
-<h2 align="center" class="silents">for joining us at 2018's:</font></span></span></h2></p>
+<h1 align="center" class="silents">Mark your calendars!</h1><br>
+<h2 align="center" class="silents">This year, the 2019</font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 											<h2 align="center" class="silents">
-											on Saturday, August 11<sup>th</sup>
+											will be on Saturday, August 10<sup>th</sup>
 											</h2></span></TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
@@ -168,7 +168,7 @@ function MM_swapImage() { //v3.0
                                             <a target="_blank" 
                                              href="https://www.facebook.com/events/2025231327790628/permalink/2052353445078416/">
                                             HERE</a>
-                                            to see photos from the event"
+                                            to see photos from last year's event"
                                             </h2>
                                             <p align=center>
                                             <a target="_blank" 
@@ -212,6 +212,7 @@ Many thanks to all the volunteers that made the evening possible, and to the sta
 											<p>
                                             <hr>
                                             <hr>
+<!-- ------------------------------------
 											<B class="EVNTC">The Event</B>
 <p>
 <h1 align="center" class="silents">Silents Under the Stars:</h1><br>
@@ -283,6 +284,8 @@ The Grateful Dudes Cowboy Band
 												<font size="6" face="Copperplate Gothic Bold" color="#770000">
 												BBQ Dinner from Rattler&#8217;s -- 7pm</font></span></td>
 													</tr>
+----------------
+-->
 												</table>
 											  </TD>
 											</TR>    
