--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ Sunday, June 23<sup>rd</sup> at 6pm in Hart Hall
 </td> <td id="Event"> 
 <a href= "Event_Pages/music2019/sax2019-lg.png" 
    title="Music in the Park" rel="lightbox[events2019]">
-Saxtravaganza Free Saxaphone Concert
+Saxtravaganza Free Saxophone Concert
 </a>
 </td></tr>
 
