Fixed another typo.

--- a/index.htm
+++ b/index.htm
@@ -238,7 +238,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <tbody>
 
 <tr> <td id="EventDate">
-Friday&ndash;Sunday, April 12<sup>th</sup>&ndash;14<sup>th</sup>)
+Friday&ndash;Sunday, April 12<sup>th</sup>&ndash;14<sup>th</sup>
 </td> <td id="Event"> 
 Cowboy Festival<br>
 <a href="Event_Pages/cowboyfest.html">
