Updated people and hosts per flyer just received.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -169,9 +169,10 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                           <td>
                             <p style="margin-top: 7px; margin-bottom:
                               5px" align="center"> <h2 align="center"> 
-William S. Hart County Park &amp; Museum<br>
-along with The Friends of Hart Park<br>
-are proud to present the<br></h2></p>
+Fernandeno Tataviam Band of Mission Indians,<br>
+County of Los Angeles Dept. of Parks and Recreation,<br>
+and The Friends of Hart Park &amp; Museum<br></h2>
+<h3 align="center"><i>are proud to present the<br></i></h3></p>
                             <h2 align="center">26<sup>th</sup> Annual</h2>
                             <p align="center"> </p>
                             <p align="center"> </p>
@@ -179,7 +180,7 @@ are proud to present the<br></h2></p>
                                 src="PowWowTitle.png" alt="PowWow">
                             </p>
                             <p align="center"> </p>
-                            <h2 align="center"> and Craft Fair.<br><br></h2>
+                            <h2 align="center"> and Craft Fair<br><br></h2>
                               </h2>
                     <hr>
 <p><h2 align="center">
@@ -209,9 +210,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 M.C.
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
-                                            Bobby Whitebird&mdash;Cheyenne
-                                            -->
+                                            Glen Begay
                                           </td>
                                         </tr>
                                         <tr>
@@ -219,9 +218,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Arena Director
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
-                                            Victor Chavez&mdash;Din&eacute;
-                                            -->
+                                            Victor Chavez
                                           </td>
                                         </tr>
                                         <tr>
@@ -229,9 +226,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Spiritual Director
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
                                             Ted Garcia
-                                            -->
                                           </td>
                                         </tr>
                                         <tr>
@@ -241,9 +236,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Head Man
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
-                                            Kale Flores&mdash;Luiseno
-                                            -->
+                                            Johnny Velasquez
                                           </td>
                                         </tr>
                                         <tr>
@@ -251,30 +244,24 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Head Woman
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
-                                            Monica Jacome&mdash;Kumeyaay/Pascua/Yaqui
-                                            -->
+                                            Sonia Rae Sierra
                                           </td>
                                         </tr>
                                         <tr>
                                           <td id="PowWowRole">
-                                                Head Boy
+                                                Head Young Boy
                                               </p>
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
-                                                Tash Montana&mdash;Tohona O'odham
-                                            -->
+                                                John Mia, Jr.
 										  </td>
                                         </tr>
                                         <tr>
                                           <td id="PowWowRole">
-                                                Head Girl
+                                                Head Young Girl
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
-                                                Gracie Hernandez&mdash;Tejon
-                                            -->
+                                            Alethea Hale
                                           </td>
                                         </tr>
                                         <tr>
@@ -290,9 +277,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Northern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
-                                            Blue Star
-                                            -->
+                                            Bear Springs
                                           </td>
                                         </tr>
                                         <tr>
@@ -300,9 +285,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Southern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
                                             Hale &amp; Co
-                                            -->
                                           </td>
                                         </tr>
                                         <tr>
@@ -311,9 +294,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                               </p>
                                           </td>
                                           <td id="PowWowPerson">
-                                          TBA <!--
                                                 TBA Each Day
-                                            -->
                                           </td>
                                         </tr>
                                       </tbody>
