Yoga graphic and new Hart Animal Art event

--- a/index.htm
+++ b/index.htm
@@ -200,6 +200,29 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                    <h2>
+                                    Barnyard Closed
+                                    </h2>
+                                    <p>
+                                    <i>Greetings Patrons</i>, 
+                                    on February 27, 2019, a California Regional Quarantine was issued for all of L.A. County and sections of Riverside County and San Bernardino County for all public exhibitions of birds due to the threat of Virulent Newcastle Disease.  As a result, our Barnyard is quarantined and not available to the public until the quarantine is lifted.  
+                                    <em>Please know our animal residents are fine and this quarantine is helping to keep them safe.  </em>
+<p>We appreciate your patience and understanding during this time.  Thank you.
+<i>&mdash;The Hart Park Staff, 661-259-1750</i>
+
+                                    </p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
                               </tbody>
                             </table>
                                 <p style="text-indent: 20px"
@@ -230,6 +253,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                           <p>
                           </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+    <a href= "Event_Pages/HartAnimalArt.jpg" 
+       title="Hart Animal Art Exhibit" rel="lightbox[events2019]">
+    <img align="center" src="Event_Pages/HartAnimalArt-sm.jpg"/><p>
+    </a>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
@@ -243,6 +271,15 @@ Friday&ndash;Sunday, April 12<sup>th</sup>&ndash;14<sup>th</sup>
 Cowboy Festival<br>
 <a href="Event_Pages/cowboyfest.html">
 FOHP events Friday &amp; Saturday, April 12<sup>th</sup> &amp; 13<sup>th</sup><br>Cow Bop &amp; National Cash
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Friday, May 11<sup>th</sup>, 5pm&ndash;8pm
+</td> <td id="Event"> 
+<a href= "Event_Pages/HartAnimalArt.jpg" 
+   title="Hart Animal Art Exhibit" rel="lightbox[events2019]">
+Hart Animal Art Exhibit
 </a>
 </td></tr>
 
@@ -267,7 +304,10 @@ Artisan Row Home Arts &amp; Crafts Show
 <tr> <td id="EventDate">
 Saturday, June 1<sup>st</sup> 8am&ndash;12pm
 </td> <td id="Event"> 
+<a href= "Event_Pages/yoga2019.jpg" 
+   title="Yoga Kula Festival" rel="lightbox[events2019]">
 Yoga Kula Festival
+</a>
 </td></tr>
 
 <tr> <td id="EventDate">
