Made Barnyard page mention quaranteen.  Removed past Cowboy Festival.

--- a/Zoo/animals.html
+++ b/Zoo/animals.html
@@ -139,12 +139,22 @@ function MM_swapImage() { //v3.0
 					</div>
 					<HR>
 					<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-					<b><i><font size="4" color="#0050A5">Thanks to a gift from Walt Disney 
+					<b><i><font size="4" color="#0050A5">
+                                    Greetings Patrons</i>, 
+                                    on February 27, 2019, a California Regional Quarantine was issued for all of L.A. County and sections of Riverside County and San Bernardino County for all public exhibitions of birds due to the threat of Virulent Newcastle Disease.  As a result, our Barnyard is quarantined and not available to the public until the quarantine is lifted.  
+                                    <em>Please know our animal residents are fine and this quarantine is helping to keep them safe.  </em>
+<p>We appreciate your patience and understanding during this time.  Thank you.
+<br><i>&mdash;The Hart Park Staff, 661-259-1750</i>
+                    
+                    
+                    <!--Thanks to a gift from Walt Disney 
 					nearly 50 years ago, there are American Bison (buffalo) in the park. 
 					The descendants of some of those original buffalo are 
 					roaming our park!&nbsp; The last remaining bison from Disney's gift died in 1994.<br><br>
-To read more about Walt Disney's donation of bison to the Wm. S. Hart Park see these articles from the SCV Historical Society's picture archive site:<br>
-					</font></i></b></p>
+To read more about Walt Disney's donation of bison to the Wm. S. Hart Park see these articles from the SCV Historical Society's picture archive site:
+-->
+<br> </font></i></b></p>
+<!--
 					<ul>
 						<li>
 						<p align="center" style="margin-top: 7px; margin-bottom: 5px">
@@ -163,10 +173,14 @@ To read more about Walt Disney's donation of bison to the Wm. S. Hart Park see t
 					is also a newly refurbished animal area that the kids will 
 					love!&nbsp; Come on by and enjoy the horses, alpacas, a deer and several ducks, chickens, etc.&nbsp;
 					</font></i></b></p>
+-->
 					<p align="center" style="margin-top: 7px; margin-bottom: 5px">&nbsp;</p>
 					<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+                    <!--
 					<b><i><font size="4" color="#0050A5">Food for feeding some 
-					of the animals may be purchased at the Trading Post.</font></i></b></TD>
+					of the animals may be purchased at the Trading Post.</font></i></b>
+                    -->
+                    </TD>
 					<TD width="60">
 					&nbsp;
 					</TD>
