--- a/index.htm
+++ b/index.htm
@@ -243,9 +243,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
                           <p>
-    <a href= "Event_Pages/HartAnimalArt.jpg" 
-       title="Hart Animal Art Exhibit" rel="lightbox[events2019]">
-    <img align="center" src="Event_Pages/HartAnimalArt-sm.jpg"/><p>
+    <a href= "Event_Pages/artisanRow2019-lg.png" 
+       title="Artisan Row Home Arts &amp; Crafts Show" rel="lightbox[events2019]">
+    <img align="center" src="Event_Pages/artisanRow2019-sm.png"/><p>
     </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
@@ -256,29 +256,20 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <tbody>
 
 <tr> <td id="EventDate">
-Friday, May 11<sup>th</sup>, 5pm&ndash;8pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/HartAnimalArt.jpg" 
-   title="Hart Animal Art Exhibit" rel="lightbox[events2019]">
-Hart Animal Art Exhibit
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
-Fridays at dusk, May 11<sup>th</sup>, June 1<sup>st</sup>, June 15<sup>th</sup>, July 20<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/music2019/music2019-lg.jpg" 
-   title="Music in the Park" rel="lightbox[events2019]">
-Music in the Park
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
 Saturday &amp; Sunday, May 18<sup>th</sup> &amp; 19<sup>th</sup>, 10am&ndash;4pm in Hart Hall
 </td> <td id="Event"> 
 <a href= "Event_Pages/artisanRow2019-lg.png" 
    title="Artisan Row Home Arts &amp; Crafts Show" rel="lightbox[events2019]">
 Artisan Row Home Arts &amp; Crafts Show
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Fridays at dusk, June 1<sup>st</sup>, June 15<sup>th</sup>, July 20<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/music2019/music2019-lg.jpg" 
+   title="Music in the Park" rel="lightbox[events2019]">
+Music in the Park
 </a>
 </td></tr>
 
@@ -329,7 +320,10 @@ Silents Under the Stars
 <tr> <td id="EventDate">
 Saturday, Sept. 14<sup>th</sup> &amp; 15<sup>th</sup>, 10am&ndash;4pm in Hart Hall
 </td> <td id="Event"> 
-Annual Hart Train Show
+<a href= "Event_Pages/trains2019-lg.png" 
+   title="Hart Train Show" rel="lightbox[events2019]">
+High Desert Modular Model Train Show
+</a>
 </td></tr>
 
 <tr> <td id="EventDate">
