--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -111,8 +111,11 @@ function MM_swapImage() { //v3.0
 					<TD width="876" valign="middle" align="center">
 					By becoming a Member of the Friends of Hart Park (click
 					<a href="../The_Friends/membership.html">here</a> for 
-					details), you will receive our wonderful newsletter, <b>Hart 
-					of the Matter!</b></TD>
+					details), you may receive our quarterly newsletter!<p>
+                    Click below to subscribe:
+                    <a target="_blank" href="https://bit.ly/hartofthematter">
+                    <img alt="Hart of the Matter" src="../images/HOTM.png"/>
+                    </a>
 					<TD width="60">
 					&nbsp;
 					</TD>
@@ -128,7 +131,7 @@ function MM_swapImage() { //v3.0
 				<TR>
 					<TD width="135" valign="bottom">
 					  <div align="left">
-					<a href="javascript:location='newsletters.html'; window.open('../Brands/branding.html','WSH','height=370,width=529,menubar=no,scrollbars=no,resizable=no')" style="text-decoration: underline"
+					<a href="javascript:location='../index.html'; " style="text-decoration: underline"
 					 onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image11','','../images/nav/branding_R2.gif',1)">
 					<img src="../images/nav/branding_B2.gif" name="Image11" width="39" height="33" border="0">
 					</a></div>
