--- a/index.htm
+++ b/index.htm
@@ -243,9 +243,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
                           <p>
-    <a href= "Event_Pages/artisanRow2019-lg.png" 
-       title="Artisan Row Home Arts &amp; Crafts Show" rel="lightbox[events2019]">
-    <img align="center" src="Event_Pages/artisanRow2019-sm.png"/><p>
+    <a href= "Event_Pages/music2019/music2019-lg.jpg" 
+       title="Music in the Park" rel="lightbox[events2019]">
+    <img align="center" src="Event_Pages/music2019/music2019-sm.jpg"/><p>
     </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
@@ -254,15 +254,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-
-<tr> <td id="EventDate">
-Saturday &amp; Sunday, May 18<sup>th</sup> &amp; 19<sup>th</sup>, 10am&ndash;4pm in Hart Hall
-</td> <td id="Event"> 
-<a href= "Event_Pages/artisanRow2019-lg.png" 
-   title="Artisan Row Home Arts &amp; Crafts Show" rel="lightbox[events2019]">
-Artisan Row Home Arts &amp; Crafts Show
-</a>
-</td></tr>
 
 <tr> <td id="EventDate">
 Fridays at dusk, June 1<sup>st</sup>, June 15<sup>th</sup>, July 20<sup>th</sup>
