Attempt to make a landing place for no information on upcoming Silents.

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -120,7 +120,7 @@ function MM_swapImage() { //v3.0
 										<br>
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
-<h1 align="center" class="silents">Mark your calendars!</h1><br>
+<h1 align="center" class="silents">Mark your calendars and keep watching this page for tickets to go on sale!</h1><br>
 <h2 align="center" class="silents">This year, the 2019</font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
@@ -168,7 +168,7 @@ function MM_swapImage() { //v3.0
                                             <a target="_blank" 
                                              href="https://www.facebook.com/events/2025231327790628/permalink/2052353445078416/">
                                             HERE</a>
-                                            to see photos from last year's event"
+                                            to see photos from last year's event
                                             </h2>
                                             <p align=center>
                                             <a target="_blank" 
