Updated to remove past events.  Highlighted Saxstravaganza.

--- a/index.htm
+++ b/index.htm
@@ -243,9 +243,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
                           <p>
-    <a href= "Event_Pages/music2019/music2019-lg.jpg" 
-       title="Music in the Park" rel="lightbox[events2019]">
-    <img align="center" src="Event_Pages/music2019/music2019-sm.jpg"/><p>
+    <a href= "Event_Pages/music2019/sax2019-lg.png" 
+       title="Saxtravaganza" rel="lightbox[events2019]">
+    <img align="center" src="Event_Pages/music2019/sax2019-sm.png"/><p>
     </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
@@ -256,29 +256,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <tbody>
 
 <tr> <td id="EventDate">
-Fridays at dusk, June 1<sup>st</sup>, June 15<sup>th</sup>, July 20<sup>th</sup>
+Fridays at dusk, June 15<sup>th</sup>, July 20<sup>th</sup>
 </td> <td id="Event"> 
 <a href= "Event_Pages/music2019/music2019-lg.jpg" 
    title="Music in the Park" rel="lightbox[events2019]">
 Music in the Park
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
-Saturday, June 1<sup>st</sup> 8am&ndash;12pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/yoga2019.jpg" 
-   title="Yoga Kula Festival" rel="lightbox[events2019]">
-Yoga Kula Festival
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
-Saturday &amp; Sunday, June 8<sup>th</sup> &amp; 9<sup>th</sup>, 10am&ndash;5pm in Hart Hall
-</td> <td id="Event"> 
-<a href= "Event_Pages/quilts2019-lg.jpg" 
-   title="SCV Quilt Guild Quilt Show" rel="lightbox[events2019]">
-SCV Quilt Guild Quilt Show
 </a>
 </td></tr>
 
