Handled cancelled Music in the Park

--- a/index.htm
+++ b/index.htm
@@ -256,15 +256,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <tbody>
 
 <tr> <td id="EventDate">
-Fridays at dusk, June 15<sup>th</sup>, July 20<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/music2019/music2019-lg.jpg" 
-   title="Music in the Park" rel="lightbox[events2019]">
-Music in the Park
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
 Sunday, June 23<sup>rd</sup> at 6pm in Hart Hall
 </td> <td id="Event"> 
 <a href= "Event_Pages/music2019/sax2019-lg.png" 
@@ -279,6 +270,15 @@ Fridays at dusk, June 28<sup>th</sup>, July 12<sup>th</sup>, July 26<sup>th</sup
 <a href= "Event_Pages/movies2019/movies2019-lg.png" 
    title="Movies in the Park" rel="lightbox[events2019]">
 Summer Movies in the Park
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Friday July 20<sup>th</sup>, at dusk
+</td> <td id="Event"> 
+<a href= "Event_Pages/music2019/music2019-lg.jpg" 
+   title="Music in the Park" rel="lightbox[events2019]">
+Music in the Park
 </a>
 </td></tr>
 
