--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
                           <p>
-    <a href= "Event_Pages/music2019/sax2019-lg.png" 
+    <a href= "Event_Pages/music2019/sax2019-lg.jpg" 
        title="Saxtravaganza" rel="lightbox[events2019]">
-    <img align="center" src="Event_Pages/music2019/sax2019-sm.png"/><p>
+    <img align="center" src="Event_Pages/music2019/sax2019-sm.jpg"/><p>
     </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
@@ -258,7 +258,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <tr> <td id="EventDate">
 Sunday, June 23<sup>rd</sup> at 6pm in Hart Hall
 </td> <td id="Event"> 
-<a href= "Event_Pages/music2019/sax2019-lg.png" 
+<a href= "Event_Pages/music2019/sax2019-lg.jpg" 
    title="Music in the Park" rel="lightbox[events2019]">
 Saxtravaganza Free Saxophone Concert
 </a>
