--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <tbody>
 
 <tr> <td id="EventDate">
-Sunday, June 23<sup>rd</sup> at 6pm in Hart Hall
+<h4>NOTE:  Corrected start time!!!</h4>
+Sunday, June 23<sup>rd</sup> at 7pm in Hart Hall
 </td> <td id="Event"> 
 <a href= "Event_Pages/music2019/sax2019-lg.jpg" 
    title="Music in the Park" rel="lightbox[events2019]">
